--- a/v02/peNoChao/views/login.ejs
+++ b/v02/peNoChao/views/login.ejs
@@ -14,11 +14,15 @@
     <!-- Include Header Não Logada-->
     <%- include('partials/headerNaoLogada') %> 
       <main>
-            <div class="container col-11 justify-content-center">
-              <div class="row justify-content-center">
+            <div class="container col-11 justify-content-center  align-items-center">
+              <div class="row justify-content-around">
+                <div  class="align-self-center" >
                   <h1 class="tituloLogin">Jogue, resenhe e se destaque no campo</h1>
                   <h2 class="subtituloLogin">Conheça a PéNoChão, a rede social da várzea!</h2>
-                <div class="row">
+
+
+                </div>
+                <div class="row my-5  ">
                   <div class=" d-flex">
                     <div class="form-cadastro my-1">
                        <h1>Login</h1>
