--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -22,8 +22,8 @@
                da pasta configs/auth  -->
                 <h5 class="text-center"><%= jogador.nome %></h5>
                 <p class="text-center"><%= jogador.posicaoJogador %></p>
-                <p class="text-center" ><a href="/cadastroTime">Seja um capitão</a></p>
-                <p class="text-center" ><a href="/atualizar">Editar Perfil</a></p>
+                <p class="text-center" ><a href="/cadastroTime" style="color:black">Seja um capitão</a></p>
+                <p class="text-center" ><a href="/atualizar" style="color:black">Editar Perfil</a></p>
                 <!-- <h5 class="text-center">Estatísticas</h5> -->
             </div>
           </div>
