--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -53,17 +53,16 @@
             </div>
 
           </div>
-          <div>
-            <h6 class="  my-1"><%=publication.descricao%></h6>
+          <div class="text-lowercase">
+          <p><%=publication.descricao%></p> 
           </div>
-
           <!--  Inicio conteudo centro container -->
           <div class="d-flex">
             <a href="#"><img src="/images/<%=publication.path%>" class="card-img " alt="Foto Post"></a>
           </div>
           <!--  fim conteudo centro container -->
           <!-- Inicio imagens para curtir pagina -->
-          <div class="d-flex ">
+          <div class="d-flex  justify-content-end">
             <div>
               <!-- botao da imagem  -->
               <form action="/atleta/like" method="POST">
@@ -73,16 +72,16 @@
               </form>
 
             </div>
-            <div class="flex-shrink-1 ml-2">
+            <div class=" ml-2">
               <h6 class=".d_text1"><%=publication.Curtidas.length%> </h6>
             </div>
             <div>
               <button class="d-button"> <i class="far fa-comment ml-2"> </i></button>
             </div>
-            <div class=" flex-grow-1  ml-2 ">
+            <div class="   ml-2 ">
               <h6 class=".d_text1"><%=publication.Comentarios.length%></h6>
             </div>
-            <div class="flex-shrink-1   ml-2 ">
+            <div class="  ml-2 ">
               <!-- usei o moment para formatar data que foi postada foto  -->
               <h6 class="text-1"> <%= moment(publication.create_at).format('DD/MM/YYYY') %></h6>
             </div>
@@ -94,24 +93,24 @@
               <div class="d-flex-column">
                 <% if (comentarios) { %>
                 <!-- verifica se tem alguma postagem se ao tiver nao entra na condicao-->
-                <% for(let comentario of comentarios ) { %>
-                <% if (comentario.postagens_id == publication.id) { %>
-                <div class="d-flex">
-                  <a href="#">
-                    <img src="/images/avatarLogado.jpg" class="rounded-circle" width="30px" height="30px"
-                      alt="Foto Perfil">
-                  </a>
-                  <a href="">
-                    <h6 class="card-text my-1 text-1">Carlos</h6>
-                  </a><br>
-
-                </div>
-
-                <h6 class="my-1"><%=comentario.descricao%></h6>
-                <p class=" card-text  my-1 text-2"><%=moment(comentario.create_at).format('DD/MM/YY')%></p>
-                <% } %>
-                <% } %>
-                <% } %>
+                  <% for(let comentario of comentarios ) { %>
+                    <% if (comentario.postagens_id == publication.id) { %>
+                      <div class="d-flex row ">
+                        <a href="#">
+                        <img src="/images/avatarLogado.jpg" class="rounded-circle" width="30px" height="30px"
+                        alt="Foto Perfil">
+                       </a>
+                        <a href="">
+                          <h6 class="card-text m-1 y-5 text-1">Carlos</h6>
+                       </a>
+                      </div>
+                      <div class=" d-flex text-lowercase column   y-5">
+                         <p><%=comentario.descricao%></p> 
+                         <p class="text-2 y-5"><%=moment(comentario.create_at).format('DD/MM/YY')%></p>
+                      </div>
+                   <% } %>
+              <% } %>
+          <% } %>
 
                 <form action="/atleta/comentario" method="POST">
                   <!-- rota so para gravar comentarios no banco de dados  -->
