--- a/v02/peNoChao/views/cadastro.ejs
+++ b/v02/peNoChao/views/cadastro.ejs
@@ -61,12 +61,10 @@
                 <option value="segundoAtacante">Segundo Atacante</option>
                 <option value="centroavante">Centroavante</option>
               </select>
-
-
-              <div>
-                <label for="cep" style="color:white;">Cep</label>
+              <label for="cep">CEP</label>
+              <div class="d-flex justify-content-around">
                 <input type="text" id="cep" name="cep" required>
-                <button type="submit" id="btnPesquisar" class="btn btn-primary">Pesquisa</button>
+                <button type="submit" id="btnPesquisar" class="btn btn-primary "><img src="/images/lupa.png" class="pesquisarCep" alt=""></button>
               </div>
               <label for="estado"> Estado </label>
               <input type="text" id="estado" name="estado" value="" required>
@@ -113,7 +111,7 @@
               <label for="telefone">Número de Telefone</label>
               <input type="text" id="telefone" name="telefone" required>
 
-              <input type="submit" id="btn-form" value="Entrar" required>
+              <input type="submit" id="btn-form" value="Cadastrar" required>
             </form>
           </div>
         </div>
