--- a/v02/peNoChao/public/stylesheets/style.css
+++ b/v02/peNoChao/public/stylesheets/style.css
@@ -148,6 +148,33 @@ body {
     padding:5px;
 }
 
+#cep{
+    width: 70%;
+    border-radius: 15px 0px 0px 15px;
+    color: #707070;
+    text-align: center;
+    height: 45px;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
+    border: solid 1px #707070;
+    margin-bottom: 20px;
+    padding:5px;
+
+}
+.pesquisarCep{
+    width: 30px;
+}
+#btnPesquisar{
+    width: 25%;
+    margin: 0px;
+    font-size: 90%;
+    border-radius: 0px 15px 15px 0px;
+    height: 45px;
+    border: solid 1px #707070;
+    text-align: center;
+    text-align: middle;
+    padding: 0;
+}
+
 #btn-form{
     margin: 5px 0px 45px 0px;
     text-align: center;
@@ -226,6 +253,9 @@ footer a{
 @media (max-width: 575.98px) {
     .form-cadastro{
         margin-top: 10vh;
+    }
+    .pesquisarCep{
+        width: 25%;
     }
     .margemForm{
         margin-top: 3vh;
