--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -70,15 +70,17 @@
     <!--Divi das fotos dos jogadores-->
     <div class="row mt-3">
       <% for(let x of jogadores) { %>
+        <% if (x.id!=jogador.id){ %>
       <div class="col-sm-4 justify-content-center">
         <div class="row justify-content-center">
           <img src="/images/<%=x.path%>"  width="50vw" class="rounded-circle">
         </div>
 
         <div class="row text-center">
-          <%=x.nome%>
+          <a href=""><%=x.nome%></a>
         </div>
       </div>
+      <%}%>
       <% } %>
 
       <!--
