criado perfilJogador o Ejs o Controller e a Rota

--- a/v02/peNoChao/views/perfilJogador.ejs
+++ b/v02/peNoChao/views/perfilJogador.ejs
@@ -14,9 +14,7 @@
   
   <main class="container">
     <div class="row mt-3">
-      <%- include('atletaPerfil') %>
-      <%- include('atletaFeed') %>  
-      <%- include('atletaResultados') %>  
+      Pagina de perfil
     </div>
   </main>
 </body>
