--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -77,7 +77,7 @@
         </div>
 
         <div class="row text-center">
-          <a href=""><%=x.nome%></a>
+          <a href="/perfilJogador"><%=x.nome%></a>
         </div>
       </div>
       <%}%>
