--- a/v02/peNoChao/public/stylesheets/style.css
+++ b/v02/peNoChao/public/stylesheets/style.css
@@ -174,6 +174,15 @@ body {
     text-align: middle;
     padding: 0;
 }
+#file{
+    color: #ffff;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+.fa-home, .fa-phone, .fa-envelope{
+    color: #ffffff
+}
 
 #btn-form{
     margin: 5px 0px 45px 0px;
