--- a/v02/peNoChao/views/atualizacaoCadastro.ejs
+++ b/v02/peNoChao/views/atualizacaoCadastro.ejs
@@ -6,7 +6,7 @@
   <!-- Configurações da Head Padrões -->
   <%- include('partials/head') %> 
 
-  <title>Cadastro - Pé no Chão</title>
+  <title>Atualização de Cadastro - Pé no Chão</title>
 
 </head>
 
@@ -39,11 +39,16 @@
               </div>
              
             </div>
-            <input  name="foto" type="file" style="
-            color: #424242;
-            cursor: pointer;
-            font-weight: bold;
-            "/>
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                
+              </div>
+              <div class="custom-file">
+                <input type="file" class="custom-file-input" id="inputGroupFile03">
+                <label class="custom-file-label" for="inputGroupFile03">Nenhuma Foto Selecionada</label>
+              </div>
+            </div>
+            <input name="foto" type="file" id="file"/>
                 <label for="nomeA"></label>
                 <input type="text" id="nomeA" name="nomeA" placeholder="<%=jogador.nome%>">
                 <label for="dataNascimentoA"> Data de Nascimento </label>
@@ -69,10 +74,10 @@
                 <option value="segundoAtacante">Segundo Atacante</option>
                 <option value="centroavante">Centroavante</option>
               </select>
-              <div>
-                <label for="cep" style="color:white;">Cep</label>
-                <input type="text" id="cep" name="cepA" placeholder="<%=jogador.cep%>" >
-                <button type="submit" id="btnPesquisar" class="btn btn-primary">Pesquisa</button>
+              <label for="cep">CEP</label>
+              <div class="d-flex justify-content-around">
+                <input type="text" id="cep" name="cepA" placeholder="<%=jogador.cep%>" required>
+                <button type="submit" id="btnPesquisar" class="btn btn-primary "><img src="/images/lupa.png" class="pesquisarCep" alt=""></button>
               </div>
               <label for="estadoA"> Estado </label>
               <input type="text" id="estado" name="estadoA"  placeholder="<%=jogador.estado%>" >
@@ -114,7 +119,7 @@
               <label for="telefoneA">Número de Telefone</label>
               <input type="text" id="telefoneA" name="telefoneA"  placeholder="<%=jogador.telefone%>">
 
-              <input type="submit" id="btn-form" value="Entrar" required>
+              <input type="submit" id="btn-form" value="Atualizar" required>
             </form>
           </div>
         </div>
