Ajuste de bordas no col perfil e na col resultados

--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -1,5 +1,6 @@
       <!-- Início da coluna do Perfil -->
-      <div class="col-sm-3 border rounded-top-penochao rounded-bottom-penochao">
+      <div class="col-sm-3 p-0 ">
+       <div class="border rounded-top-penochao rounded-bottom-penochao">
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <!-- Banner Profile-->
@@ -8,9 +9,10 @@
                 </div>
               </div>
         </div>
-        <div class="row">
+        <div class="row ">
             <div class="col d-flex justify-content-center">
                 <!-- Foto profile -->
+                <% if(jogador.path == null) { jogador.path="avatarLogado.jpg"} %>
                 <div class="foto-perfil"  style="background-image: url('/images/<%=jogador.path%>');">
                 </div>
             </div>
@@ -66,5 +68,6 @@
  
           </div>
         </div>
+      </div> 
       </div>
       <!-- Fim da coluna do Perfil -->
