--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -1,6 +1,8 @@
 <!-- Início da coluna 3 - Resultados -->
 <div
-  class="col-sm-3 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao justify-content-center">
+  class="col-sm-3 p-0 m-0 justify-content-center">
+  
+  <div class="border p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao">
   <!-- <div class="row mt-2 justify-content-center">
           <h5 class="text-center">Resultado de</h5>
         </div> -->
@@ -142,5 +144,8 @@
 
 
 
+
+
+</div>
 </div>
 <!-- Fim da coluna 3 - Resultados -->
