--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -2,7 +2,7 @@
 <div
   class="col-sm-3 p-0 m-0 justify-content-center">
   
-  <div class="border p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao">
+  <div>
   <!-- <div class="row mt-2 justify-content-center">
           <h5 class="text-center">Resultado de</h5>
         </div> -->
@@ -16,7 +16,7 @@
 
 
   <!--Div do placar-->
-  <div class="container-fluide border mt-3 ">
+  <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao ">
     <div class="mt-2">
       <h5 class="text-center">
         <a href="/times" style="color:black">Times</a> </h5>
@@ -65,7 +65,7 @@
 
 
   <!--Div do grado dos jogadores destaque-->
-  <div class="container-fluide border mt-3 mb-3 pb-3 px-4">
+  <div class="container-fluid p-2 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao mt-3 mb-3 pb-3 px-4">
     <div class="mt-2">
       <h5 class="text-center">Jogadores</h5>
     </div>
