Ajuste de margem no container principal e proporção do logo do time

--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -27,7 +27,7 @@
         <div class="carousel-item active">
           <div class="row mt-3">
             <div class="col d-flex justify-content-center">
-              <img src="/images/logofinal.png" width="60%" height="90%">
+              <img src="/images/logofinal.png" width="50%">
             </div>
           </div>
           <!--Divi dos numeros dos placares-->
@@ -42,7 +42,7 @@
         <div class="carousel-item">
           <div class="row mt-3">
             <div class="col d-flex justify-content-center">
-              <img src="/images/<%=time.MidiasTimes[0].path%> " width="60%" height="90%">
+              <img src="/images/<%=time.MidiasTimes[0].path%> " width="50%">
 
             </div>
           </div>
