--- a/v02/peNoChao/views/atleta.ejs
+++ b/v02/peNoChao/views/atleta.ejs
@@ -13,7 +13,7 @@
     <%- include('partials/headerLogada') %> 
   
   <main class="container">
-    <div class="row mt-3">
+    <div class="row mt-3 mb-3">
       <%- include('atletaPerfil') %>
       <%- include('atletaFeed') %>  
       <%- include('atletaResultados') %>  
