--- a/v02/peNoChao/public/stylesheets/style2.css
+++ b/v02/peNoChao/public/stylesheets/style2.css
@@ -37,7 +37,8 @@
 }
 
 .text-1{
-    font-size:9px;
+    margin: 0;
+    font-size:13px;
     color: black  ;
     font-family:roboto;
     opacity: 100%;
