--- a/v02/peNoChao/views/cadastro.ejs
+++ b/v02/peNoChao/views/cadastro.ejs
@@ -67,7 +67,7 @@
                 <button type="submit" id="btnPesquisar" class="btn btn-primary "><img src="/images/lupa.png" class="pesquisarCep" alt=""></button>
               </div>
               <label for="estado"> Estado </label>
-              <input type="text" id="estado" name="estado" value="" required>
+              <input type="text" id="estado" name="estado" value="" required rea>
               <!-- <select name="estado" id="estado">
                     <option value="AC">Acre</option>
                     <option value="AL">Alagoas</option>
@@ -103,10 +103,10 @@
 
 
               <label for="cidade">Cidade</label>
-              <input type="text" id="cidade" name="cidade" value="" required>
+              <input type="text" id="cidade" name="cidade" value="" required readonly>
 
               <label for="bairro">Bairro</label>
-              <input type="text" id="bairro" name="bairro" value="" required>
+              <input type="text" id="bairro" name="bairro" value="" required readonly>
 
               <label for="telefone">Número de Telefone</label>
               <input type="text" id="telefone" name="telefone" required>
