--- a/v02/peNoChao/views/cadastroTimes.ejs
+++ b/v02/peNoChao/views/cadastroTimes.ejs
@@ -30,11 +30,11 @@
                   <label for="nome">  Nome do time: </label>
                   <input type="nome" id="nome" name="nome" >
 
-                  <label for="cep"> Cep da Sede do Time: </label>
-                  <input type="cep"  id="cep"  name="cep">
+                  <label for="cep"> CEP da Sede do Time: </label>
+                  <input type="cep"  id="nome"  name="cep">
 
                   <label for="logo"> Brasão do time: </label>
-                  <input type="file" name="logo" id="logo">
+                  <input type="file" name="logo" id="file">
                  
                   <input class="mb-4" type="submit" id="btn-form"value="Salvar">
                 </form>
