--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -26,7 +26,7 @@
     <!-- verifica se tem alguma postagem se ao tiver nao entra na condicao-->
     <% publications.reverse(); publications.forEach(publication => { %>
     <!-- pela array puplication passa pelo reverse() para trocar orgem do arry antes de passar para forEach-->
-    <div class="row mx-2 my-2 bg-white rounded-penochao">
+    <div class="row mx-2 my-2 bg-white mb-4 rounded-penochao">
       <div class="col-12 ">
 
         <!-- Inicio parte inferior  do time line -->
