Alterado repositório de midias de images para images/midias

--- a/v02/peNoChao/views/atualizacaoCadastro.ejs
+++ b/v02/peNoChao/views/atualizacaoCadastro.ejs
@@ -34,7 +34,7 @@
                 <!-- Foto profile -->
                 <div >
                   <div>  </div>
-               <input class="foto-perfil b-file" style="background-image: url('/images/<%=jogadorLogado.path%>');"  >
+               <input class="foto-perfil b-file" style="background-image: url('/images/midias/<%=jogadorLogado.path%>');"  >
                
               </div>
              
