--- a/v02/peNoChao/views/atletaPerfil.ejs
+++ b/v02/peNoChao/views/atletaPerfil.ejs
@@ -13,7 +13,7 @@
             <div class="col d-flex justify-content-center">
                 <!-- Foto profile -->
                 <% if(jogadorLogado.path == null) { jogadorLogado.path="avatarLogado.jpg"} %>
-                <div class="foto-perfil"  style="background-image: url('/images/<%=jogadorLogado.path%>');">
+                <div class="foto-perfil"  style="background-image: url('/images/midias/<%=jogadorLogado.path%>');">
                 </div>
             </div>
         </div>
