--- a/v02/peNoChao/views/atletaResultados.ejs
+++ b/v02/peNoChao/views/atletaResultados.ejs
@@ -42,7 +42,7 @@
         <div class="carousel-item">
           <div class="row mt-3">
             <div class="col d-flex justify-content-center">
-              <img src="/images/<%=time.MidiasTimes[0].path%> " width="50%">
+              <img src="/images/midias/<%=time.MidiasTimes[0].path%> " width="50%">
 
             </div>
           </div>
@@ -75,7 +75,7 @@
         <% if (x.id!=jogador.id){ %>
       <div class="col-sm-4 justify-content-center">
         <div class="row justify-content-center">
-          <img src="/images/<%=x.path%>"  width="50vw" class="rounded-circle">
+          <img src="/images/midias/<%=x.path%>"  width="50vw" class="rounded-circle">
         </div>
 
         <div class="row text-center">
