--- a/v02/peNoChao/views/perfilJogador.ejs
+++ b/v02/peNoChao/views/perfilJogador.ejs
@@ -27,7 +27,7 @@
               <div class="row">
                   <div class="col d-flex justify-content-center">
                       <!-- Foto profile -->
-                      <div class="foto-perfil"  style="background-image: url('/images/<%=jogador.path%>');">
+                      <div class="foto-perfil"  style="background-image: url('/images/midias/<%=jogador.path%>');">
                       </div>
                   </div>
               </div>
