--- a/v02/peNoChao/views/atletaFeed.ejs
+++ b/v02/peNoChao/views/atletaFeed.ejs
@@ -35,7 +35,7 @@
           <div class="d-flex">
             <div class="d-flex">
               <a href="/perfilJogador/<%=publication.Jogador.id%>">
-                <img src="/images/<%=publication.Jogador.path%>" class="rounded-circle" width="30px" height="30px"
+                <img src="/images/midias/<%=publication.Jogador.path%>" class="rounded-circle" width="30px" height="30px"
                   alt="Foto perfil"></a>
             </div>
 
@@ -58,7 +58,7 @@
           </div>
           <!--  Inicio conteudo centro container -->
           <div class="d-flex">
-            <a href="#"><img src="/images/<%=publication.path%>" class="card-img " alt="Foto Post"></a>
+            <a href="#"><img src="/images/midias/<%=publication.path%>" class="card-img " alt="Foto Post"></a>
           </div>
           <!--  fim conteudo centro container -->
           <!-- Inicio imagens para curtir pagina -->
@@ -97,7 +97,7 @@
                     <% if (comentario.postagens_id == publication.id) { %>
                       <div class="d-flex row ">
                         <a href="/perfilJogador/<%=comentario.Jogador.id%>">
-                        <img src="/images/<%=comentario.Jogador.path%>" class="rounded-circle" width="30px" height="30px"
+                        <img src="/images/midias/<%=comentario.Jogador.path%>" class="rounded-circle" width="30px" height="30px"
                         alt="Foto Perfil">
                        </a>
                         <a href="/perfilJogador/<%=comentario.Jogador.id%>">
