--- a/v02/peNoChao/views/times.ejs
+++ b/v02/peNoChao/views/times.ejs
@@ -35,7 +35,7 @@
         <div class="card-header d-flex justify-content-between bg-white"  id="" >
             <% time.MidiasTimes.forEach(midia => { %>
                 <% console.log("aqui: " + midia.path) %>
-                <img class=" " src="/images/<%= midia.path %>" width="80px" height="80px" alt="">
+                <img class=" " src="/images/midias/<%= midia.path %>" width="80px" height="80px" alt="">
             <% }); %>
             <button class="btn btn-link p-0" type="button" data-toggle="collapse" data-target="#<%= time.id %>">
             <h5 class=" pr-5"><%= time.nome %></h5>  
