--- a/v02/peNoChao/views/atualizacaoCadastro.ejs
+++ b/v02/peNoChao/views/atualizacaoCadastro.ejs
@@ -114,8 +114,8 @@
               <label for="bairroA">Bairro</label>
               <input type="text" id="bairro" name="bairroA"  placeholder="<%=jogadorLogado.bairro%>" value="" readonly>
 
-              <label for="telefoneA">Número de Telefone</label>
-              <input type="text" id="telefoneA" name="telefoneA"  placeholder="<%=jogadorLogado.telefone%>">
+              <!-- <label for="telefoneA">Número de Telefone</label>
+              <input type="text" id="telefoneA" name="telefoneA"  placeholder="<%=jogadorLogado.telefone%>"> -->
 
               <input type="submit" id="btn-form" value="Atualizar" required>
             </form>
