Label Nome em atualizacaoCadastro

--- a/v02/peNoChao/views/atualizacaoCadastro.ejs
+++ b/v02/peNoChao/views/atualizacaoCadastro.ejs
@@ -47,7 +47,7 @@
             </div>
             <input name="foto" type="file" id="file"/>
             
-                <label for="nomeA"></label>
+                <label for="nomeA">Nome:</label>
                 <input type="text" id="nomeA" name="nomeA" placeholder="<%=jogadorLogado.nome%>">
                 <label for="dataNascimentoA"> Data de Nascimento </label>
                 <input type="date" id="dataNascimentoA" name="dataNascimentoA"  >
